# ladybug

./: Windowsgui.py  pyproject.toml  start.py  test_cap.py
datastore/: config.json
legacy test/: 4steppergui.py  BeefyGUI.py  buttonpress.py  checkpress.py  definescansimulation.py  example scroll window.py  laserscangui.py  restartsimulation.py  selectest.py  testvideo.py
src/camera/: __init__.py  imaging.py
src/demos_etc/: __init__.py
src/lights/: __init__.py
src/motion/: __init__.py  units.py
src/storage/: __init__.py
src/strategies/: __init__.py
src/util/: __init__.py
utils/: LaserScanToImage.py  RemoveBlurry.py  WriteGCodes.py  blur.py  cropToSmallest.py  delFiles.py  findSameZ.py  findcolors.py  imageStitch.py  imagetools.py  moveForStack.py  pickandplace.py  read_files.py  rename.py  smartcrop.py  track_ball.py  writeSPJ.py
utils/smartcrop/: smartcrop.py
