[tool.poetry]
name = "ladybug"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
circlify = "^0.15.0"
imutils = "^0.5.4"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
opencv-python = "^4.7.0"
Pillow = "^9.4.0"
pyserial = "^3.5"
tools = "^0.1.9"
tsp = "^1.4.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
