[tool.poetry]
name = "ladybug"
version = "0.1.0"
description = "Control & stitching software for 3d microscopes."
authors = ["@Waynewaynehello, @yuji3w, @counterintuitive98, and @MC42. "]

[tool.poetry.dependencies]
python = "^3.10"
circlify = "^0.15.0"
imutils = "^0.5.4"
matplotlib = "^3.6.3"
numpy = "^1.24.1"
opencv-python = "^4.7.0"
Pillow = "^9.4.0"
pyserial = "^3.5"
tools = "^0.1.9"
tsp = "^1.4.6"
peewee = "^3.15.4"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
autoflake = "^2.0.0"
black = "^22.12.0"
autopep8 = "^2.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.messages_control]
disable = [
    "arguments-differ",
    "attribute-defined-outside-init",
    "bad-continuation",
    "blacklisted-name",
    "duplicate-code",
    "fixme",
    "import-error",
    "no-member",
    "no-name-in-module",
    "no-self-use",
    "protected-access",
    "stop-iteration-return",
    "too-few-public-methods",
    "too-many-arguments",
    "too-many-branches",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-locals",
    "too-many-return-statements",
    "too-many-statements",
    "abstract-method",
    "chained-comparison",
    "eval-used",
    "exec-used",
    "expression-not-assigned",
    "global-statement",
    "missing-docstring",
    "redefined-argument-from-local",
    "redefined-outer-name",
    "reimported",
    "too-many-ancestors",
    "unexpected-special-method-signature",
]
